# pq-laser-triad

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Cross.toml  README.md  build.rs  flake.nix  justfile  rust-toolchain.toml  shell.nix  wrapper.h
libsepia2/include/: Portabt.h  Sepia2_Lib64_dll.h
native/include/: Sepia2_Lib.h  Sepia2_Lib64_dll.h
sepia2/: Cargo.toml  README.md  build.rs
sepia2-client-jll/: Cargo.toml
sepia2-client-jll/src/: lib.rs  types.rs
sepia2-client-py/: Makefile  flake.nix  pyproject.toml
sepia2-client-py/src/sepia2_client/: __init__.py
sepia2-client-py/src/sepia2_client_py/: __init__.py
sepia2-client-py/tests/: test_sepia2_grpc.py
sepia2-grpc/: Cargo.toml  README.md  build.rs
sepia2-grpc/proto/: api.proto  logs.proto
sepia2-grpc/src/: client.rs  lib.rs  main.rs  named_pipe_stream.rs  sepia2_rpc.rs  server.rs
sepia2-sys/: Cargo.toml  README.md  build.rs  wrapper.h
sepia2-sys/.cargo/: config.toml
sepia2-sys/native/include/: Sepia2_Def.h  Sepia2_Lib_dll.h
sepia2-sys/native/lib/win-x64/: dll_resource.rc
sepia2-sys/native/lib/win-x86/: dll_resource.rc
sepia2-sys/src/: api.rs  constants.rs  errors.rs  lib.rs  types.rs
sepia2/proto/: api.proto
sepia2/src/: api.rs  constants.rs  error.rs  lib.rs  types.rs
src/: api.rs  bindings.rs  error.rs  errors.rs  lib.rs  types.rs
