[package]
name = "sepia2-sys"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmt = "0.1.0"
lazy_static = "1.5.0"
libloading = "0.8.6"
log = "0.4.25"
tempfile = "3.16.0"
test-log = "0.2.17"

[build-dependencies]
bindgen = "0.71.0"
