[package]
name = "sepia2-sys"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmt = "0.1.0"
lazy_static = "1.5.0"
libloading = "0.8.6"
log = "0.4.25"
temp-dir = "0.1.14"
tempfile = "3.16.0"
test-log = "0.2.17"
winapi = { version = "0.3.9", features = ["libloaderapi", "winbase", "winuser"] }

[build-dependencies]
bindgen = "0.71.0"
embed-resource = "3.0.2"
eyre = "0.6.12"
