[package]
name = "pq-driver-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmt = "0.1.0"
log = "0.4.25"
tempfile = "3.16.0"
test-log = "0.2.17"
sepia2-sys = { path = "../sepia2-sys" }

[build-dependencies]
prost = "0.13.4"
